# vermissa

./: LICENSE  README.md  pyproject.toml
configs/: config.yaml  tinyllama.yaml
data/book=sherlock/stage=chunked/: part-000.pt
data/book=sherlock/stage=clean/: part-000.pt
src/vermissa/: data.py  generate.py  inference.py  train.py  utils.py
