[project]
name = "vermissa"
description = ""
dynamic = ["version"]

requires-python = ">=3.10"
dependencies = [
    "requests",
    "transformers[torch]",
    "torch",
    "hf_xet",
    "ipykernel",
    "bitsandbytes",
    "accelerate"
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
[dependency-groups]
dev = [
    "ipython>=8.36.0",
]

[tool.pdm]
package-dir = "src"